testsuite/tests/formats-transition/ignored_scan_counters.ocaml.reference


Line 11, characters 0-3:
11 | let () = Printf.printf "%_n"
     ^^^
Error: Syntax error

